# Zero-Knowledge-Proofs

./: .gitignore  Cargo.toml  Makefile.toml  Nargo.toml  Scarb.toml
documentation/: Formulas.md  Math.md  Rollups.md  noir.md
src/: contract.cairo  test.rs
